# final_project

./: .gitignore  AllInOne  AllInOne.cpp  AssetManager.cpp  AssetManager.h  BackGroundManager.cpp  CMakeCache.txt  CMakeLists.txt  Collision.cpp  Collision.h  Collision.hpp  CollisionClass.h  Components.hpp  ECS.hpp  ECSclass.hpp  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameBoardComponent.cpp  GameObject.cpp  GameObject.h  MM.cpp  Makefile  Map.cpp  Map.h  Map.hpp  Mapclass.hpp  Menu.h  MenuComponent.cpp  MenuComponent.h  Puyo.cpp  Puyo.h  Puyo_test.cpp  README.md  T  TextureManager.cpp  TextureManager.h  Vector2D.h  Vector2D.hpp  (+26 more)
CMAKE/: FindSDL2Mixer.cmake  FindSDL2TTF.cmake
ECS/: Animation.h  BackGroundComponent.h  BackGroundComponent.hpp  ButtomComponent.h  CharactorComponent.h  ColliderComponent.h  Collision.hpp  Components.h  Components.hpp  DoubleGameBoardComponent.cpp  DoubleGameBoardComponent.h  ECS.cpp  ECS.h  ECS.hpp  ECSaddGroup.hpp  GameBoardComponent.cpp  GameBoardComponent.h  KeyBoardController.h  MenuComponent.cpp  MenuComponent.h  PlayerComponent.h  PositionComponent.hpp  SpiriteComponent.hpp  SpriteComponent.h  SpriteComponent.hpp  TextButtomComponent.h  TileComponent.h  TransformComponent.h  TransformComponent.hpp
ECS/Charactor/: Miku.cpp  Miku.h
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
img/: p16x16.map
src/: BackGroundManager.h  Board.cpp  Board.h  ButtomComponent.h  CMakeCache.txt  CMakeLists.txt  CharactorComponent.h  DoubleGameBoardComponent.cpp  DoubleGameBoardComponent.h  ECS.cpp  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameBoardBase.h  GameBoardComponent.cpp  GameBoardComponent.h  Makefile  Menu.cpp  Menu.h  MenuComponent.cpp  MenuComponent.h  MenuElement.cpp  MenuElement.h  TextureManager.cpp  Vector2D.cpp  Vector2D.h  cmake_install.cmake  main  main.cpp  menu
src/ECS/: BackGroundComponent.h  ButtomComponent.h  CharactorComponent.h  Components.h  DoubleGameBoardComponent.cpp  DoubleGameBoardComponent.h  ECS.h  GameBoardComponent.cpp  GameBoardComponent.h  MenuComponent.cpp  MenuComponent.h  TextButtomComponent.h  test_initial_SDL.h
src/img/: score.kra
