cmake_minimum_required(VERSION 3.13.1)
project(final_project)

set(CMAKE_C_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMAKE")

ADD_EXECUTABLE(final_project puyo.cpp)

FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_IMAGE)
FIND_PACKAGE(SDL2TTF)
FIND_PACKAGE(SDL2Mixer)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2Mixer_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2Mixer_LIBRARY})